fix bug:white space

--- a/client/src/app/todo/todos/todos.component.css
+++ b/client/src/app/todo/todos/todos.component.css
@@ -6,7 +6,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	margin-top: 1rem;
+	margin-top: 2rem;
 }
 .title {
 	border-radius: 1rem;
@@ -16,7 +16,7 @@
 	font-weight: normal;
 	padding: 20px 16px 20px 16px;
 	text-align: center;
-	box-shadow: 0 0 7px rgba(0,0,0,0.2), inset 0 0 1px rgba(0,0,0,0.2);
+	box-shadow: 0 0 7px rgba(0,0,0,0.2), inset 0 0 2px rgba(0,0,0,0.4);
 }
 
 h1,h2 { 
@@ -38,7 +38,7 @@ h1 {
 	display: flex;
 	justify-content: space-between;
 	border-bottom: .05rem solid #D8D8D8;
-	margin-bottom: 1.3px;
+	margin-bottom: 1.6px;
 	box-shadow: 0 0 10px rgba(0,0,0,0.14);
 }
 app-todo {
